# sentinel

./: .env.example  .gitignore  BOT.md  CONTRIBUTING.md  DEPLOY.md  DEV_DIARY.md  DEV_V2.md  Dockerfile  Makefile  QUICKSTART.md  README.md  ROADMAP.md  Security.md  __init__.py  bot.py  config.example.yaml  config.yaml  conftest.py  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  simulate_retroactiva.py  sitecustomize.py
.streamlit/: config.toml
Dev Diary/: Version_0.0.31_-_Dev-v3.md  Version_0.0.32_-_Dev-v3.md  Version_0.0.3_-_Dev-v3.md  Version_0.0.40.md  Version_0.0.41_-_dev-v5.md  Version_0.1.00.md
api/: README.md  main.py
centinel-engine/: .env.example  README.md  package.json
centinel_dashboard/: README.md  package.json  tailwind.config.ts  tsconfig.json
centinel_engine/: .env.example  LICENSE  README.md  package.json
command_center/: .env.example  README.md  __init__.py  config.yaml.example  endpoints.py  master_switch.py  rules_config.py  settings.py
config/: config.yaml  default.yaml  simulation_2025.yaml
contracts/: CentinelAnchor.sol
control_master/: .env.example  README.md  config.yaml.example
core/: __init__.py
dashboard/: README.md  app.py  centinel_pdf_report.py  requirements.txt  streamlit_app.py
data/: HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-03 21_45_08.json  HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-03 22_00_40.json  HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-04 13_00_52.json  HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-04 14_00_09.json  HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-04 14_00_42.json  HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-04 16_00_04.json  HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-04 16_00_37.json  HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-05 12_07_14.json  HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-05 13_01_25.json  HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-05 14_00_08.json  HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-05 16_00_08.json  snapshot_2026-01-03_03-35-45.json  snapshot_2026-01-03_09-43-13.json  snapshot_2026-01-03_13-43-26.json  snapshot_2026-01-03_15-42-32.json  snapshot_2026-01-03_18-58-15.json  snapshot_2026-01-03_21-34-15.json  snapshot_2026-01-04_04-22-38.json  snapshot_2026-01-04_07-00-21.json  snapshot_2026-01-04_09-38-32.json  snapshot_2026-01-04_13-44-03.json  snapshot_2026-01-04_15-42-50.json  snapshot_2026-01-04_19-00-19.json  snapshot_2026-01-04_21-34-27.json  snapshot_2026-01-05_04-42-31.json  snapshot_2026-01-05_07-20-23.json  snapshot_2026-01-05_09-57-22.json  snapshot_2026-01-05_13-56-27.json  snapshot_2026-01-05_15-52-14.json  snapshot_2026-01-05_19-00-31.json  snapshot_2026-01-05_21-40-55.json  snapshot_2026-01-06_03-59-38.json  snapshot_2026-01-06_07-04-09.json  snapshot_2026-01-06_09-51-18.json  snapshot_2026-01-06_13-52-20.json  snapshot_2026-01-06_15-47-06.json  snapshot_2026-01-06_18-56-32.json  snapshot_2026-01-06_21-40-17.json
data_test/: HN.PRESIDENTE.00-TODOS.000-TODOS 2025-12-03 14_32_13.json  (+11 more)
(+266 files in other folders)
