[tool.poetry]
name = "centinel-engine"
version = "0.1.0"
description = "C.E.N.T.I.N.E.L.: sistema técnico para auditoría continua de datos electorales públicos en Honduras"
authors = ["userf8a2c4 <contact@centinel.app>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/userf8a2c4/centinel-engine"
repository = "https://github.com/userf8a2c4/centinel-engine"
documentation = "https://github.com/userf8a2c4/centinel-engine#readme"
keywords = ["auditoria-electoral", "transparencia", "hashchain", "open-data", "civic-tech"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
packages = [{ include = "centinel", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = ">=2.31.0"
playwright = ">=1.49.0"
playwright-stealth = ">=1.0.6"
pandas = ">=2.1.0"
numpy = ">=1.24.0"
scipy = ">=1.11.4"
scikit-learn = ">=1.5.0"
python-dateutil = ">=2.8.2"
PyYAML = ">=6.0.2"
python-dotenv = ">=1.0.1"
rich = ">=13.7.0"
httpx = "*"
apscheduler = ">=3.10.4"
flask-limiter = ">=3.7.0"
tenacity = "*"
pydantic = "*"
pydantic-settings = "*"
structlog = "*"
typer = "*"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
ruff = "*"
black = "*"
mypy = "*"
pytest-cov = "*"
httpx-mock = "*"
pytest-mock = ">=3.14.0"
responses = ">=0.25.0"

[tool.poetry.scripts]
centinel = "centinel.cli:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
